# ai-mood-detector-using-Poetry

./: POETRY in Python.docx  README.md  main.py  pyproject.toml
