[project]
name = "ai-mood-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "sai.jagdale",email = "161121425+sai-jagdale@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "speechrecognition (>=3.14.4,<4.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)"
]

[tool.poetry]
packages = [{include = "ai_mood_detector", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
